# zkIA

./: .gitignore  README.md  register_contract.py
backend/: prover.py  test.py
backend/crates/hydentity/: simple.rs
contract/src/: lib.rs
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  config.ts  hyle.tsx  main.tsx
frontend/src/components/: Hydentity.tsx  ZkIA.tsx
frontend/src/hyle-js/: test.ts
frontend/src/hyle-js/src/: blob_builder.ts  client.ts  index.ts
frontend/src/hyle-js/src/model/: amm.ts  hydentity.ts  hyle.ts  index.ts  mmid.ts  staking.ts  token.ts
host/: Cargo.toml
hyle/: README.md
hyle/contract/: Cargo.toml
hyle/contract/src/: jwt.rs  lib.rs
hyle/host/: Cargo.toml
hyle/host/src/: main.rs
hyle/methods/guest/src/: main.rs
keycloak/: README.md  run_dev.sh  seed_dev.py
prover/: prover.py
prover/crates/hydentity/: Cargo.toml  cli.rs  server.rs
