[package]
name = "contract-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9.7", features = ["sha2"] }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
sdk = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
borsh = { version = "1.5.5" }
serde_json = "1.0"
hex = "0.4.3"
base64 = "0.22.1"
jsonwebkey = { version = "0.3.4", features = ["pkcs-convert"] }