[package]
name = "hyle-hydentity"
version = "0.1.0"
edition = "2021"
description = "Hyle Smart Contract"
rust-version = "1.81"

[[bin]]
name = "host"
path = "host.rs"

[[bin]]
name = "server"
path = "server.rs"

[dependencies]
sdk = { path = "./sdk", version = "0.1.0" }
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
anyhow = "1.0.96"
borsh = { version = "1.5.5", features = ["derive"] }
hex = "0.4.3"

risc0-zkvm = { version = "1.2.4", default-features = false, optional = true, features = ["std"] }
client-sdk = { path = "./client-sdk", version = "0.1.0", features = ["risc0"], optional = true }
sha2 = "=0.10.8"

[dev-dependencies]
sdk = { path = "./sdk", version = "0.1.0", features = ["full-model", "tracing"] }
hyle-hydentity = { path = ".", features = ["client"] }
client-sdk = { path = "./client-sdk", version = "0.1.0", features = ["risc0", "rest", "indexer"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
client = ["client-sdk"]
risc0 = ["risc0-zkvm", "sdk/risc0"]
